fix(popup.css): adjust the alignment

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,7 +8,7 @@
   justify-content: center;
   background-color: rgba(0, 0, 0, .5);
   padding: 195px 425px 0px 425px;
-  align-items: flex-start;
+  align-items: center;
 }
 
 @media screen and (max-width: 768px) {
